--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,16 @@
         "ext-mbstring": "*",
         "ext-ctype": "*",
         "altorouter/altorouter": "^1.2",
-        "rdlowrey/auryn": "^1.4"
+        "rdlowrey/auryn": "^1.4",
+        "phpmailer/phpmailer": "^6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "7.*"
     },
     "autoload": {
         "psr-4": {"Pike\\": "src/"}
+    },
+    "scripts": {
+        "test": "\"vendor/bin/phpunit\" --bootstrap ./tests/bootstrap.php"
     }
 }
