--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "license": "Apache-2.0",
     "require": {
-        "php": "~7.1",
+        "php": ">=7.2",
         "ext-pdo_mysql": "*",
         "ext-mbstring": "*",
         "ext-ctype": "*",
