--- a/composer.json
+++ b/composer.json
@@ -4,19 +4,24 @@
     "type": "library",
     "license": "Apache-2.0",
     "require": {
-        "php": ">=7.2",
+        "php": "^7.2",
         "ext-pdo_mysql": "*",
         "ext-mbstring": "*",
         "ext-ctype": "*",
         "altorouter/altorouter": "^1.2",
-        "rdlowrey/auryn": "^1.4",
-        "phpmailer/phpmailer": "^6.1"
+        "rdlowrey/auryn": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "8.*"
     },
+    "suggest": {
+        "phpmailer/phpmailer": "To use Authenticator->requestPasswordReset()."
+    },
     "autoload": {
         "psr-4": {"Pike\\": "src/"}
+    },
+    "autoload-dev": {
+        "psr-4": { "Pike\\Tests\\": "tests/" }
     },
     "scripts": {
         "test": "\"vendor/bin/phpunit\" --bootstrap ./tests/bootstrap.php"
