--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "ext-pdo_mysql": "*",
         "ext-mbstring": "*",
         "ext-ctype": "*",
-        "altorouter/altorouter": "^1.2",
-        "rdlowrey/auryn": "^1.4"
+        "altorouter/altorouter": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "8.*"
@@ -19,7 +18,10 @@
         "masterminds/html5": "To use Extensions\\Validation\\SafeHTMLValidator."
     },
     "autoload": {
-        "psr-4": {"Pike\\": "src/"}
+        "psr-4": {
+            "Pike\\": "src/",
+            "Auryn\\": "auryn-php8/lib"
+        }
     },
     "autoload-dev": {
         "psr-4": { "Pike\\Tests\\": "tests/" }
