--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "autoload": {
         "psr-4": {
             "Pike\\": "src/",
-            "Auryn\\": "auryn-php8/lib"
+            "Auryn\\": "baohx2000-auryn/lib/"
         }
     },
     "autoload-dev": {
