--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "ext-pdo_mysql": "*",
         "ext-mbstring": "*",
         "ext-ctype": "*",
-        "altorouter/altorouter": "^1.2"
+        "altorouter/altorouter": "^1.2",
+        "rdlowrey/auryn": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "8.*"
@@ -18,10 +19,7 @@
         "masterminds/html5": "To use Extensions\\Validation\\SafeHTMLValidator."
     },
     "autoload": {
-        "psr-4": {
-            "Pike\\": "src/",
-            "Auryn\\": "baohx2000-auryn/lib/"
-        }
+        "psr-4": {"Pike\\": "src/"}
     },
     "autoload-dev": {
         "psr-4": { "Pike\\Tests\\": "tests/" }
